# jquants_mcp

./: README.md  pyproject.toml
jquants_mcp/: __main__.py
jquants_mcp/libs/: client.py  models.py
